[package]
name = "ggstdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
scraper = "0.14.0"
regex = "1.7.1"
lazy_static = "1.4.0"
tokio = { version = "1.24.2", features = ["full"] }
